--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.3",
     "react-router-dom": "^6.22.0",
+    "react-spinners": "^0.13.8",
     "socket.io-client": "^4.7.4",
     "sort-by": "^1.2.0",
     "translation-check": "^1.1.0",
