--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.8.2",
+    "@hookform/resolvers": "^3.3.4",
     "@tanstack/react-query": "^5.22.2",
     "@tanstack/react-query-devtools": "^5.24.0",
-    "auto-zustand-selectors-hook": "^2.0.0",
+    "@tippyjs/react": "^4.2.6",
     "axios": "^1.6.7",
     "classnames": "^2.5.1",
     "i18next": "^23.8.2",
@@ -23,18 +24,23 @@
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.3",
+    "mobx": "^6.12.1",
+    "mobx-persist-store": "^1.1.4",
+    "mobx-react-lite": "^4.0.6",
     "peerjs": "^1.5.2",
     "primereact": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.1",
     "react-i18next": "^14.0.3",
     "react-router-dom": "^6.22.0",
     "react-spinners": "^0.13.8",
+    "react-use": "^17.5.0",
     "socket.io-client": "^4.7.4",
     "sort-by": "^1.2.0",
     "translation-check": "^1.1.0",
     "uuid": "^9.0.1",
-    "zustand": "^4.5.2"
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.202",
