--- a/package.json
+++ b/package.json
@@ -43,6 +43,12 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.24.1",
+    "@babel/core": "^7.24.4",
+    "@babel/plugin-proposal-decorators": "^7.24.1",
+    "@babel/preset-env": "^7.24.4",
+    "@babel/preset-react": "^7.24.1",
+    "@babel/preset-typescript": "^7.24.1",
     "@types/lodash": "^4.14.202",
     "@types/peerjs": "^1.1.0",
     "@types/react": "^18.2.43",
