--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "mobx-persist-store": "^1.1.4",
     "mobx-react-lite": "^4.0.6",
     "peerjs": "^1.5.2",
-    "primereact": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.1",
@@ -37,7 +36,6 @@
     "react-spinners": "^0.13.8",
     "react-use": "^17.5.0",
     "socket.io-client": "^4.7.4",
-    "sort-by": "^1.2.0",
     "translation-check": "^1.1.0",
     "uuid": "^9.0.1",
     "yup": "^1.4.0"
@@ -58,6 +56,8 @@
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.55.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "prettier": "3.2.5",
