--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,9 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": [
     "src"
