--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "peerjs": "^1.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-hook-form": "^7.51.1",
     "react-i18next": "^14.0.3",
     "react-router-dom": "^6.22.0",
