--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-draggable": "^4.4.6",
     "react-hook-form": "^7.51.1",
     "react-i18next": "^14.0.3",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.0",
     "react-spinners": "^0.13.8",
     "react-use": "^17.5.0",
@@ -52,6 +53,7 @@
     "@types/peerjs": "^1.1.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-modal": "^3.16.3",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
