--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
+    "date-fns": "^4.1.0",
     "i18next": "^23.8.2",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.3",
