--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mafia",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "start": "vite",
@@ -20,7 +20,7 @@
     "@tanstack/react-query": "^5.22.2",
     "@tanstack/react-query-devtools": "^5.24.0",
     "@tippyjs/react": "^4.2.6",
-    "axios": "^1.7.9",
+    "axios": "1.8.2",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.6.0",
@@ -35,8 +35,8 @@
     "mobx-persist-store": "^1.1.4",
     "mobx-react-lite": "^4.0.6",
     "peerjs": "^1.5.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-draggable": "^4.4.6",
     "react-hook-form": "^7.51.1",
     "react-i18next": "^14.0.3",
@@ -75,7 +75,7 @@
     "sass": "^1.83.4",
     "sass-migrator": "^2.3.1",
     "typescript": "^5.3.3",
-    "vite": "^6.0.11",
+    "vite": "6.3.4",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
