--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@tanstack/react-query": "^5.22.2",
     "@tanstack/react-query-devtools": "^5.24.0",
     "@tippyjs/react": "^4.2.6",
+    "@types/crypto-js": "^4.2.2",
     "axios": "1.8.2",
     "classnames": "^2.5.1",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.6.0",
     "i18next": "^23.8.2",
