--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@ant-design/icons": "^4.8.2",
     "@hookform/resolvers": "^3.3.4",
+    "@livekit/components-react": "^2.9.14",
+    "@livekit/components-styles": "^1.1.6",
     "@mediapipe/camera_utils": "^0.3.1675466862",
     "@mediapipe/selfie_segmentation": "^0.1.1675465747",
     "@tanstack/react-query": "^5.22.2",
@@ -30,13 +32,13 @@
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.3",
     "immer": "^10.0.4",
+    "livekit-client": "^2.15.7",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.3",
     "mobx": "^6.12.1",
     "mobx-persist-store": "^1.1.4",
     "mobx-react-lite": "^4.0.6",
-    "peerjs": "^1.5.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-draggable": "^4.4.6",
